[project]

name = "wait-time-logger"
version = "0.1.0"
description = "Wait time logging and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
# license = {file = "LICENSE.txt"}
keywords = ["logging", "wait-times"]
authors = [
  {name = "John Belval", email = "john.b.belval@gmail.com" }
]
maintainers = [
  {name = "John Belval", email = "john.b.belval@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",

  # "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "pandas"
]

[project.urls]  # Optional
"Homepage" = "https://github.com/jbelval/wait-time-logger"
"Source" = "https://github.com/jbelval/wait-time-logger"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
# sample = "sample:main"

[tool.setuptools]

# package-data = {"sample" = ["*.dat"]}

[build-system]
# requires = ["setuptools>=43.0.0", "wheel"]
# build-backend = "setuptools.build_meta"